feature: выполнить техническое задание 12 спринта