@@ -1,88 +1,83 @@
 package ru.yandex.practicum.filmorate.service;
 
+import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
-import ru.yandex.practicum.filmorate.exception.ConditionsNotMetException;
-import ru.yandex.practicum.filmorate.exception.FilmNotFoundException;
-import ru.yandex.practicum.filmorate.exception.UserNotFoundException;
+import ru.yandex.practicum.filmorate.dto.CreateFilmDto;
+import ru.yandex.practicum.filmorate.dto.FilmDto;
+import ru.yandex.practicum.filmorate.mapper.FilmMapper;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
-import ru.yandex.practicum.filmorate.storage.user.UserStorage;
+import ru.yandex.practicum.filmorate.storage.genre.GenreStorage;
+import ru.yandex.practicum.filmorate.storage.rating.MpaRatingStorage;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Getter
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class FilmService {
-    private final FilmStorage filmStorage;
-    private final UserStorage userStorage;
-    private static final Logger log = LoggerFactory.getLogger(FilmService.class.getName());
+    FilmStorage filmStorage;
+    MpaRatingStorage mpaRatingStorage;
+    GenreStorage genreStorage;
 
-    public List<Film> findMostPopularFilms(int count) {
-        log.info("Создаем список самых популярных фильмов по количеству лайков.");
-        // создаем список от большего количества лайков к меньшему
-        List<Film> films = filmStorage.findAll().stream()
-                .sorted(Comparator.comparing(film -> film.getLikes().size()))
-                .toList().reversed();
-
-        log.trace("Список самых популярных фильмов успешно составлен");
-        if (films.size() <= count) {
-            return films;
-        } else {
-            return films.subList(0, count);
-        }
+    public Collection<FilmDto> findAll() {
+        return filmStorage.findAll().stream()
+                .map(film -> FilmMapper.filmDtoMapper(film, mpaRatingStorage.getFilmMpaRating(film.getId()),
+                        genreStorage.getFilmGenres(film.getId())))
+                .collect(Collectors.toList());
     }
 
-    public Film addLike(Long filmId, Long userId) {
-        log.info("Добавляем лайк указанному фильму.");
-        Film film = checkFilmAndUserExist(filmId, userId, "добавлении лайка фильму");
-        if (film.getLikes().contains(userId)) {
-            log.error("Пользователь с id " + userId + " уже поставил лайк фильму с id " + filmId + ".");
-            throw new ConditionsNotMetException(
-                    "Пользователь с id " + userId + " уже поставил лайк фильму с id " + filmId + ".");
-        } else {
-            film.getLikes().add(userId);
+    public FilmDto getFilmById(Long filmId) {
+        return FilmMapper.filmDtoMapper(filmStorage.getFilmById(filmId), mpaRatingStorage.getFilmMpaRating(filmId),
+                genreStorage.getFilmGenres(filmId));
+    }
+
+    public FilmDto create(CreateFilmDto createFilmDto) {
+        Film film = filmStorage.create(createFilmDto);
+
+        if (!(createFilmDto.getMpa() == null) && createFilmDto.getMpa().getId() != 0) {
+            mpaRatingStorage.createMpaAndFilmConn(film.getId(), createFilmDto.getMpa().getId());
         }
-        log.trace("Лайк фильму успешно поставлен.");
-        return film;
+        if (!(createFilmDto.getGenres() == null) && !createFilmDto.getGenres().isEmpty()) {
+            genreStorage.createGenreAndFilmConn(film.getId(), createFilmDto.getGenres());
+        }
+
+        return FilmMapper.filmDtoMapper(film, mpaRatingStorage.getFilmMpaRating(film.getId()),
+                genreStorage.getFilmGenres(film.getId()));
+    }
+
+    public FilmDto update(FilmDto newFilm) {
+        Film film = filmStorage.update(newFilm);
+
+        if (!(newFilm.getMpa() == null) && newFilm.getMpa().getId() != 0) {
+            mpaRatingStorage.createMpaAndFilmConn(film.getId(), newFilm.getMpa().getId());
+        }
+        if (!(newFilm.getGenres() == null) && !newFilm.getGenres().isEmpty()) {
+            genreStorage.createGenreAndFilmConn(film.getId(), newFilm.getGenres());
+        }
+
+        return FilmMapper.filmDtoMapper(film, mpaRatingStorage.getFilmMpaRating(film.getId()),
+                genreStorage.getFilmGenres(film.getId()));
+    }
+
+    public Collection<FilmDto> findMostPopularFilms(int count) {
+        return filmStorage.findMostPopularFilms(count).stream()
+                .map(film -> FilmMapper.filmDtoMapper(film, mpaRatingStorage.getFilmMpaRating(film.getId()),
+                        genreStorage.getFilmGenres(film.getId())))
+                .collect(Collectors.toList());
+    }
+
+    public FilmDto addLike(Long filmId, Long userId) {
+        return FilmMapper.filmDtoMapper(filmStorage.addLike(filmId, userId), mpaRatingStorage.getFilmMpaRating(filmId),
+                genreStorage.getFilmGenres(filmId));
     }
 
     public void removeLike(Long filmId, Long userId) {
-        log.info("Удаляем лайк у фильма.");
-        Film film = checkFilmAndUserExist(filmId, userId, "удалении лайка");
-        film.getLikes().remove(userId);
-        log.trace("Лайк успешно удален.");
-    }
-
-    private Film checkFilmAndUserExist(Long filmId, Long userId, String message) {
-        log.info("Проверяем существует ли фильм и пользователь с соответствующими id.");
-        Optional<Film> filmToCheck = filmStorage.findAll().stream()
-                .filter(filmInMap -> Objects.equals(filmInMap.getId(), filmId))
-                .findFirst();
-
-        boolean userToCheck = userStorage.findAll().stream()
-                .filter(userInMap -> Objects.equals(userInMap.getId(), userId))
-                .findFirst().isEmpty();
-
-        if (filmToCheck.isEmpty() && userToCheck) {
-            log.error("Ошибка при " + message + ". " +
-                    "Фильм с id " + filmId + " и пользователь с id " + userId + " не найдены.");
-            throw new FilmNotFoundException("Ошибка при " + message + ". " +
-                    "Фильм с id " + filmId + " и пользователь с id " + userId + " не найдены.");
-        }
-        if (filmToCheck.isEmpty()) {
-            log.error("Ошибка при " + message + ". Фильм с id " + userId + " не найден.");
-            throw new FilmNotFoundException("Ошибка при " + message + ". Фильм с id " + userId + " не найден.");
-        }
-        if (userToCheck) {
-            log.error("Ошибка при " + message + ". Пользователь с id " + userId + " не найден.");
-            throw new UserNotFoundException("Ошибка при " + message + ". Пользователь с id " + userId + " не найден.");
-        }
-        log.trace("Данные фильма и пользователя были успешно найдены.");
-        return filmToCheck.get();
+        filmStorage.removeLike(filmId, userId);
     }
 }
